Stories: fix quote section overflow by containing wrapper and removing bleed margin

--- a/mycoffee/app/storiessubpage/stories.css
+++ b/mycoffee/app/storiessubpage/stories.css
@@ -607,11 +607,12 @@ body {
   width: 100%;
   padding: 120px 0;
   margin-top: -120px;
+  overflow: hidden;
 }
 
 .quote-feature-wrapper {
   position: relative;
-  width: 1200px;
+  width: min(1200px, 100%);
   height: 520px;
   margin: 0 auto;
 }
@@ -623,7 +624,7 @@ body {
   top: 0;
   width: 720px;
   height: 520px;
-  margin-left: -125px;
+  margin-left: 0;
   overflow: hidden;
 }
 
